--- a/webapp/styles.css
+++ b/webapp/styles.css
@@ -8,6 +8,12 @@ html {
     background-color: white;
 }
 
+body {
+    flex-direction: column;
+    display: flex;
+    height: 100vh;
+}
+
 header {
     background-color: darkgrey;
     color: white;
@@ -20,6 +26,7 @@ header {
 }
 
 header nav {
+    justify-content: flex-start;
     color: white;
     display: flex;
     font-size: 20pt;
@@ -56,19 +63,58 @@ h1 {
 }
 
 h2 {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
-section {
+h3 {
+    font-size: 1rem;
+}
+
+h1, h2, h3, p, a, span, small {
+    width: fit-content;
+}
+
+p {
+    text-indent: 2rem;
+}
+
+section, .content {
     color: black;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
     padding-top: 1rem;
-    padding-bottom: 0.5rem;
+    padding-bottom: 1rem;
 }
 
 ol, ul {
     padding-left: 0rem;
     padding-right: 0rem;
+}
+
+li {
+    list-style-type: none;
+}
+
+hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+footer {
+    background-color: darkgrey;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-top: auto;
+}
+
+:target {
+    background-color: yellow;
 }
