--- a/astro/src/pages/blogs.astro
+++ b/astro/src/pages/blogs.astro
@@ -1,20 +1,7 @@
 ---
-import Header from '../components/header.astro';
+import Default from '@layouts/default.astro';
 ---
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="The blogs of an aspiring web developer." />
-	<title>Blogs - Joshua Coquia's Website</title>
-	<link rel="stylesheet" href="/styles.css" />
-	<script type="module" src="/src/script.ts"></script>
-</head>
-
-<body>
-	<header />
+<Default title="Blogs - Joshua Coquia's Website">
 	<section class="content">
 		<h2 id="Blogs">Blogs</h2>
 		<p>I currently do not have any completed blogs. Come back later to see a blog!</p>
@@ -27,10 +14,4 @@ import Header from '../components/header.astro';
 			</section>
 		 -->
 	</section>
-	<footer>
-		<p>Thank you for visiting my website!</p>
-		<p><span>Source Code: </span><a href="https://github.com/JoshuaCoquia/personalwebsite/">https://github.com/JoshuaCoquia/personalwebsite/</a></p>
-	</footer>
-</body>
-
-</html>
+</Default>
