--- a/astro/src/pages/projects.astro
+++ b/astro/src/pages/projects.astro
@@ -1,3 +1,7 @@
+---
+import Header from '@components/header.astro';
+import Footer from '@components/footer.astro';
+---
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,6 +15,7 @@
 </head>
 
 <body>
+	<Header />
 	<section class="content">
 		<h2 id="Projects">Projects</h2>
 		<p>List of Projects:</p>
@@ -23,10 +28,7 @@
 			<p>This is my personal website.</p>
 		</section>
 	</section>
-	<footer>
-		<p>Thank you for visiting my website!</p>
-		<p><span>Source Code: </span><a href="https://github.com/JoshuaCoquia/personalwebsite/">https://github.com/JoshuaCoquia/personalwebsite/</a></p>
-	</footer>
+	<Footer />
 </body>
 
 </html>
